--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -82,7 +82,7 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "ird-resource" }
       - { label: "ID", name: "id", widget: "string" }
-      - { label: "Tags", name: "tags", widget: "string" }
+      - { label: "Tags", name: "tags", widget: "list" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Url", name: "url", widget: "string" }
       - { label: "Description", name: "description", widget: "markdown" }
