--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-slick": "^0.27.9",
     "remark-slug": "^6.0.0",
     "rss-parser": "^3.9.0",
+    "sha1": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "theme-ui": "^0.3.1"
   },
