--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rss-parser": "^3.9.0",
     "sha1": "^1.1.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.0",
     "theme-ui": "^0.3.1"
   },
   "keywords": [],
