--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -87,7 +87,7 @@ collections:
       - { label: "Url", name: "url", widget: "string" }
       - { label: "Description", name: "description", widget: "markdown" }
       - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Image", name: "image", widget: "image", required: "false"}
+      - { label: "Image", name: "image", widget: "image", required: false}
 
   
   - name: "opportunities"
