--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -42,6 +42,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Feed Key", name: "feedKey", widget: "string" }
       - { label: "Url", name: "url", widget: "string" }
+      - { label: "Image", name: "image", widget: "image", required: false }
 
   - name: "fbEvents"
     label: "Events"
