--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -61,6 +61,7 @@ collections:
       - { label: "Description", name: "description", widget: "markdown" }
       - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Location", name: "location", widget: "string" }
+      - { label: "Image", name: "image", widget: "image", required: false }
 
   - name: "fbConfigs"
     label: "Event Configs"
@@ -106,7 +107,7 @@ collections:
       - { label: "Url", name: "url", widget: "string" }
       - { label: "Organization", name: "org", widget: "string" }
       - { label: "Description", name: "description", widget: "markdown" }
-      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Image", name: "image", widget: "image", required: false}
       - { label: "Date", name: "date", widget: "datetime" }
       
   - name: "courses"
