--- a/src/data/opportunities/jacobs-project-support-tue-mar-23-2021-14-06-00-gmt-0700-pacific-daylight-time.json
+++ b/src/data/opportunities/jacobs-project-support-tue-mar-23-2021-14-06-00-gmt-0700-pacific-daylight-time.json
@@ -4,5 +4,6 @@
   "title": "Jacobs Project Support",
   "org": "Jacobs Institute for Design Innovation",
   "description": "JPS was created to support research, academic, and co-curricular projects with technical fabrication support, virtual design support from our Design Specialists, and pick-up arrangement. JPS offers a variety of fabrication methods, including laser cutting, 3D printing, and most of our other rapid prototyping processes. This is offered campus-wide, with project facilitation prioritized by user tiers. JPS is free to use with the exception of material costs. ",
-  "url": "https://jacobsinstitute.berkeley.edu/jps/"
+  "url": "https://jacobsinstitute.berkeley.edu/jps/",
+  "image": "/img/jacobs-logo.png"
 }
