Update Opportunity “apple-entrepreneur-camp-fri-mar-26-2021-14-15-51-gmt-0700-pacific-daylight-time”

--- a/src/data/opportunities/apple-entrepreneur-camp-fri-mar-26-2021-14-15-51-gmt-0700-pacific-daylight-time.json
+++ b/src/data/opportunities/apple-entrepreneur-camp-fri-mar-26-2021-14-15-51-gmt-0700-pacific-daylight-time.json
@@ -2,7 +2,7 @@
   "templateKey": "opportunity",
   "date": "2021-03-26T21:15:51.066Z",
   "title": "Apple Entrepreneur Camp",
-  "url": "https://developer.apple.com/news/?id=1tgs0nzp&1614025843",
+  "url": "https://developer.apple.com/entrepreneur-camp/female-founders/",
   "org": "Apple",
-  "description": "Apple Entrepreneur Camp supports underrepresented founders and developers as they build the next generation of cutting-edge apps and helps form a global network that encourages the pipeline and longevity of these entrepreneurs in technology. Applications are open now for the next cohort for female founders and developers, which runs online from July 20 to 29, 2021. Attendees receive code-level guidance, mentorship, and inspiration with unprecedented access to Apple engineers and leaders.\n\n"
+  "description": "Apple Entrepreneur Camp supports underrepresented founders and developers as they build the next generation of cutting-edge apps and helps form a global network that encourages the pipeline and longevity of these entrepreneurs in technology. Applications are open for the next cohort for female founders and developers, which runs online from July 20 to 29, 2021. Attendees receive code-level guidance, mentorship, and inspiration with unprecedented access to Apple engineers and leaders."
 }
