--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "netlify-cms-app": "^2.12.19",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.9.0",
     "react-hamburger-menu": "^1.2.1",
     "react-helmet": "^6.1.0",
