--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.9.0",
     "react-hamburger-menu": "^1.2.1",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^6.0.1",
     "react-slick": "^0.27.9",
     "remark-slug": "^6.0.0",
     "rss-parser": "^3.9.0",
